<?xml version="1.0"?>
<package format="3">
  <name>tf2_server</name>
  <version>1.1.1</version>
  <description>TF2 server that can provide transforms over separate TF topics</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <url>https://github.com/peci1/tf2_server</url>
  <url type="bugtracker">https://github.com/peci1/tf2_server/issues</url>
  <url type="repository">https://github.com/peci1/tf2_server</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>tf</test_depend>

  <export>
    <nodelet plugin="${prefix}/tf2_server_nodelets.xml" />
    <nodelet plugin="${prefix}/tf2_server_test_nodelets.xml" />
  </export>
</package>
